# vips

./: .gitignore  CMakeLists.txt  README.md
src/: lp_model.cpp  lp_model.h  utils.h
tests/: CMakeLists.txt  test_lp_model.cpp
